Fix HTML structure and remove duplicates

--- a/index.html
+++ b/index.html
@@ -87,12 +87,8 @@
     </div>
 <button class="resultat-knapp" onclick="showResult()">VISA RESULTAT</button>
 <p id="resultText"></p>
-  </div>
-  </html> </body> <script src="quizsvar.js"></script>
+   <script src="quizsvar.js"></script>
 </body>
 </html>
-  </div>
   
-</body>
 
-</html>
